Change in family section

--- a/index.html
+++ b/index.html
@@ -208,10 +208,9 @@
 
             <dt class="family">Family</dt>
             <dd>
-                <p><strong>Father : </strong> Mukul Pandya (Works at Adani Gas Ltd as Associate Officer)<br>
+                <p><strong>Father : </strong> Mukul Pandya (Works at Adani Gas Ltd as Officer)<br>
                     <strong>Mother : </strong> Bhargavi Pandya (Homemaker)<br>
-                    <strong>Brother(Elder) : </strong> Arpit Pandya (Married & Works at Prime Healthcare as Application
-                    Analyst) <br>
+                    <strong>Brother(Elder) : </strong> Arpit Pandya (Married & Works at Prime Healthcare as Team Lead) <br>
                 </p>
             </dd>
 
