--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <dd>
                 <p><strong>Father : </strong> Mukul Pandya (Works at Adani Gas Ltd as Officer)<br>
                     <strong>Mother : </strong> Bhargavi Pandya (Homemaker)<br>
-                    <strong>Brother(Elder) : </strong> Arpit Pandya (Married & Works at Prime Healthcare as Team Lead) <br>
+                    <strong>Brother(Elder) : </strong> Arpit Pandya (Married & Works at Prime Healthcare as EHR Application Analyst Lead) <br>
                 </p>
             </dd>
 
